src/html/html32.java
/* Generated By:JJTree&JavaCC: Do not edit this line. html32.java */
package html;

public class html32/*@bgen(jjtree)*/implements html32TreeConstants, html32Constants {/*@bgen(jjtree)*/
  protected JJThtml32State jjtree = new JJThtml32State();

  void error_skipto(int kind) throws ParseException {
                             /*@bgen(jjtree) error_skipto */
ASTerror_skipto jjtn000 = (ASTerror_skipto)ASTerror_skipto.jjtCreate(this, JJTERROR_SKIPTO);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);
try {ParseException e = generateParseException();  // generate the exception object.
  System.err.println(e.toString());  // print the error message
  Token t;
  do {
    t = getNextToken();
  } while (t.kind != kind);/*@bgen(jjtree)*/
} finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
}
  }

// ================================================================
  final public void pcdata() throws ParseException {
 /*@bgen(jjtree) pcdata */
  ASTpcdata jjtn000 = (ASTpcdata)ASTpcdata.jjtCreate(this, JJTPCDATA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PCDATA);
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void attribute() throws ParseException {
 /*@bgen(jjtree) attribute */
        ASTattribute jjtn000 = (ASTattribute)ASTattribute.jjtCreate(this, JJTATTRIBUTE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token n, v = null;
    try {
      jj_consume_token(A_NAME);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case A_EQ:
        jj_consume_token(A_EQ);
        v = jj_consume_token(CDATA);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void attlist() throws ParseException {
                  /*@bgen(jjtree) attlist */
  ASTattlist jjtn000 = (ASTattlist)ASTattlist.jjtCreate(this, JJTATTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        attribute();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case A_NAME:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Eheading() throws ParseException {
    if (jj_2_1(2)) {
      h1();
    } else if (jj_2_2(2)) {
      h2();
    } else if (jj_2_3(2)) {
      h3();
    } else if (jj_2_4(2)) {
      h4();
    } else if (jj_2_5(2)) {
      h5();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAGO:
        h6();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Epreformatted() throws ParseException {
    pre();
  }

  final public void Elist() throws ParseException {
    if (jj_2_6(2)) {
      ul();
    } else if (jj_2_7(2)) {
      ol();
    } else if (jj_2_8(2)) {
      dir();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAGO:
        menu();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Efont() throws ParseException {
    if (jj_2_9(2)) {
      tt();
    } else if (jj_2_10(2)) {
      i();
    } else if (jj_2_11(2)) {
      b();
    } else if (jj_2_12(2)) {
      u();
    } else if (jj_2_13(2)) {
      strike();
    } else if (jj_2_14(2)) {
      big();
    } else if (jj_2_15(2)) {
      small();
    } else if (jj_2_16(2)) {
      sub();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAGO:
        sup();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Ephrase() throws ParseException {
    if (jj_2_17(2)) {
      em();
    } else if (jj_2_18(2)) {
      strong();
    } else if (jj_2_19(2)) {
      dfn();
    } else if (jj_2_20(2)) {
      code();
    } else if (jj_2_21(2)) {
      samp();
    } else if (jj_2_22(2)) {
      kbd();
    } else if (jj_2_23(2)) {
      _var();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAGO:
        cite();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Especial() throws ParseException {
    if (jj_2_24(2)) {
      a();
    } else if (jj_2_25(2)) {
      img();
    } else if (jj_2_26(2)) {
      applet();
    } else if (jj_2_27(2)) {
      font();
    } else if (jj_2_28(2)) {
      basefont();
    } else if (jj_2_29(2)) {
      br();
    } else if (jj_2_30(2)) {
      script();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAGO:
        map();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Eform() throws ParseException {
    if (jj_2_31(2)) {
      input();
    } else if (jj_2_32(2)) {
      select();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAGO:
        textarea();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Etext() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PCDATA:
      pcdata();
      break;
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_33(2)) {
        Efont();
      } else if (jj_2_34(2)) {
        Ephrase();
      } else if (jj_2_35(2)) {
        Especial();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAGO:
          Eform();
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void tt() throws ParseException {
             /*@bgen(jjtree) tt */
  ASTtt jjtn000 = (ASTtt)ASTtt.jjtCreate(this, JJTTT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STAGO);
      jj_consume_token(TT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case A_NAME:
        attlist();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(TAGC);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAGO:
        case PCDATA:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_2;
        }
        Etext();
      }
      jj_consume_token(ETAGO);
      jj_consume_token(TT);
      jj_consume_token(TAGC);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void i() throws ParseException {
            /*@bgen(jjtree) i */
  ASTi jjtn000 = (ASTi)ASTi.jjtCreate(this, JJTI);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STAGO);
      jj_consume_token(I);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case A_NAME:
        attlist();
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(TAGC);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAGO:
        case PCDATA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_3;
        }
        Etext();
      }
      jj_consume_token(ETAGO);
      jj_consume_token(I);
      jj_consume_token(TAGC);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void b() throws ParseException {
            /*@bgen(jjtree) b */
  ASTb jjtn000 = (ASTb)ASTb.jjtCreate(this, JJTB);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STAGO);
      jj_consume_token(B);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case A_NAME:
        attlist();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(TAGC);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAGO:
        case PCDATA:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_4;
        }
        Etext();
      }
      jj_consume_token(ETAGO);
      jj_consume_token(B);
      jj_consume_token(TAGC);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void u() throws ParseException {
            /*@bgen(jjtree) u */
  ASTu jjtn000 = (ASTu)ASTu.jjtCreate(this, JJTU);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STAGO);
      jj_consume_token(U);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case A_NAME:
        attlist();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(TAGC);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAGO:
        case PCDATA:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_5;
        }
        Etext();
      }
      jj_consume_token(ETAGO);
      jj_consume_token(U);
      jj_consume_token(TAGC);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void strike() throws ParseException {
                 /*@bgen(jjtree) strike */
  ASTstrike jjtn000 = (ASTstrike)ASTstrike.jjtCreate(this, JJTSTRIKE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STAGO);
      jj_consume_token(STRIKE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case A_NAME:
        attlist();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(TAGC);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAGO:
        case PCDATA:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_6;
        }
        Etext();
      }
      jj_consume_token(ETAGO);
      jj_consume_token(STRIKE);
      jj_consume_token(TAGC);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
